chnage relative absolute to relative path

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <title>Leonids | A Jekyll theme</title>
   <meta name="description" content="A simple and awesome blog theme powered by jekyll.">
 
-  <!-- CSS files -->
-  <link rel="stylesheet" href="/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <!-- CSS files /css/font-awesome.min.css -->
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <link rel="canonical" href="/">
   <link rel="alternate" type="application/rss+xml" title="Leonids" href="/feed.xml" />
@@ -290,8 +290,8 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
-<script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 
 </body>
